src/objects/FieloAlpha__Action__c.object
<CustomObject>
    <description>The action its defined by a Rule Trigger and a target member selected in the rule</description>
    <fields>
        <fullName>FieloPLT__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Status of the action</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CriteriaFields__c</fullName>
        <label>Criteria Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CrossField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CrossField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RelatedList__c</fullName>
        <label>Related List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RuleTrigger__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rule Trigger</label>
        <referenceTo>FieloPLT__RuleTrigger__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TargetMember__c</fullName>
        <description>API name of the field in the object that is a look up for a Member record. This field is used in order to know to which Member the points will be given to if a Transaction is created.</description>
        <inlineHelpText>API name of the field in the object that is a look up for a Member record. This field is used in order to know to which Member the points will be given to if a Transaction is created.</inlineHelpText>
        <label>Target Member</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TargetObject__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>